# CGMA

./: CMakeLists.txt
examples/: vector.c
include/: array.h  status.h  vector.h
src/: array.c  vector.c
